fix: overflow

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -150,6 +150,8 @@
     .top 
         flex-basis: 49%
     .story 
+        &__description 
+            max-height: unset
         &-video 
             &__poster 
                 height: 141px
@@ -200,6 +202,7 @@
                 line-height: 14px
                 margin-bottom: 10px
             &__title 
+                max-height: 40px
                 font-size: 16px
                 margin-bottom: 12px
             &__link 
