--- a/sass/blocks/_blog.sass
+++ b/sass/blocks/_blog.sass
@@ -84,6 +84,9 @@
             font-weight: 500
             font-size: 22px
             line-height: 32px
+            max-width: 100% 
+            max-height: 64px
+            overflow: hidden
             letter-spacing: 0.2px
             color: $primary
             margin-bottom: 18px
