--- a/sass/blocks/_book.sass
+++ b/sass/blocks/_book.sass
@@ -8,6 +8,7 @@
         background-color: rgba(179, 186, 197, 0.1)
         padding: 103px 119px
         &__image
+            height: 100%
             box-shadow: 0px 20px 24px rgba(0, 0, 0, 0.08)
     &-about 
         max-width: 585px
@@ -36,6 +37,8 @@
             font-weight: normal
             font-size: 18px
             line-height: 32px
+            max-height: 200px 
+            overflow: auto
             color: $secondary
         &__button
             border: 2px solid $blue
