--- a/sass/blocks/_mail.sass
+++ b/sass/blocks/_mail.sass
@@ -2,10 +2,9 @@
     &__container 
         border-radius: 12px
         background-color: $blue
-        height: 236px
     &__wrapper 
         width: 100%
-        height: 100%
+        min-height: 236px
         display: flex
         align-items: flex-start
         justify-content: space-between
