--- a/sass/blocks/_store.sass
+++ b/sass/blocks/_store.sass
@@ -62,6 +62,8 @@
             font-weight: 500
             font-size: 22px
             line-height: 32px
+            max-height: 65px 
+            overflow: hidden
             letter-spacing: 0.2px
             color: $primary
             margin-bottom: 16px
