--- a/sass/blocks/_story.sass
+++ b/sass/blocks/_story.sass
@@ -22,6 +22,8 @@
         font-weight: normal
         font-size: 18px
         line-height: 32px
+        max-height: 120px 
+        overflow: auto
         color: $secondary
     &-wide 
         width: 100%
@@ -29,6 +31,9 @@
         margin-top: 20px
         margin-bottom: 30px
         position: relative
+        &__poster 
+            object-fit: cover
+            max-height: 380px
         &__button 
             width: 100px
             height: 100px
@@ -61,7 +66,10 @@
             font-style: normal
             font-weight: normal
             font-size: 16px
+            max-width: 300px 
             line-height: 22px
+            max-height: 22px
+            overflow: hidden
             color: $secondary
         &__favorite 
             position: absolute
